<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Smart Words </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="se102_next_popup">다음으로 넘어가시겠습니까?</string>
    <string name="insert_login_data">아이디 혹은 비밀번호를 입력하세요.</string>
    <string name="insert_num_english">영어 혹은 숫자만 입력가능합니다.</string>
    <string name="id">아이디</string>
    <string name="retry">재시도</string>
    <string name="terminate">종료</string>
    <string name="pwd">비밀번호</string>
    <string name="find_id_pw">ID/PW 찾기</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="find">찾기</string>
    <string name="mcode">M코드</string>
    <string name="password">비밀번호</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="process_change_password">비밀번호 변경 중입니다.</string>
    <string name="process_change_password_done">비밀번호가 변경되었습니다.</string>
    <string name="process_change_password_fail">비밀번호 변경에 실패했습니다.\n잠시후 다시 시도해주세요.</string>
    <string name="certification">인증</string>
    <string name="comp_name">학습관명</string>
    <string name="hint_insert_name">이름을 입력하세요.</string>
    <string name="hint_insert_mcode">예)M2645642666</string>
    <string name="hint_insert_id">아이디를 입력하세요.</string>
    <string name="hint_insert_pwd">비밀번호를 입력하세요.</string>
    <string name="hint_insert_pwd_check">비밀번호 확인을 입력하세요.</string>
    <string name="studyroom">학습관</string>
    <string name="name">이름</string>
    <string name="program">프로그램</string>
    <string name="study_category">학습영역</string>
    <string name="test_date">평가일자</string>
    <string name="total_book_count">교재총권수</string>
    <string name="duration">소요시간</string>
    <string name="score">점수</string>
    <string name="area">영역</string>
    <string name="correct_count">맞은개수</string>
    <string name="my_score">내점수</string>
    <string name="age_avg">동일연령 평균</string>
    <string name="avg">평균</string>
    <string name="lead_time">소요시간\n(적정시간)</string>
    <string name="listening">듣기</string>
    <string name="read">읽기</string>
    <string name="speak">말하기</string>
    <string name="write">쓰기</string>
    <string name="monthly_test_info">        학생이 해당 영역에서 적정시간을 초과하여 문제를 풀었을 경우 소요시간이 붉은색으로 표시됩니다.</string>
    <string name="comment">코멘트</string>
    <string name="save_id">아이디 저장</string>
    <string name="study_room_mode">교사점검모드(학습관모드)</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="experience_login">체험하기</string>
    <string name="join_member">아이디만들기</string>
    <string name="check_used_id">아이디 중복확인</string>
    <string name="comfirm">확인</string>
    <string name="cancel">취소</string>
    <string name="book">교재</string>
    <string name="total_study_time">총 학습시간</string>
    <string name="left_hand">왼손잡이</string>
    <string name="controll_ff_rew">빨리감기 / 건너뛰기</string>
    <string name="loud_level">큰소리 레벨</string>
    <string name="error_report">오류신고</string>
    <string name="is_show_background_img">배경 이미지 표시</string>
    <string name="dialog_logout">로그아웃 하시겠습니까?</string>
    <string name="title_study_history">전 교재 학습 현황</string>
    <string name="title_study_book_select">학습할 교재를 선택하세요</string>
    <string name="title_study_chapter_select">학습할 차시를 선택하세요</string>
    <string name="title_monthly_review_report">Monthly Review Report</string>
    <string name="title_daily_report">Daily Report</string>
    <string name="request_study_finish">점검을 기다리는 동안 교재를 가져와\n\n학습한 내용을 확인해 보세요.</string>
    <string name="called_student">선생님께서 부르십니다.</string>
    <string name="req_study_finish">최종점검 신청</string>
    <string name="req_study_review">답안지 보기</string>
    <string name="study_book_name">교재명</string>
    <string name="book_and_duration">교재명 및 학습 기간</string>
    <string name="book_study">교재학습</string>
    <string name="smart_evaluation">스마트 평가</string>
    <string name="is_invalid_sessionid">죄송합니다.\n일시적인 문제로 로그아웃 되었습니다.</string>
    <string name="chapter_study_history">차시학습</string>
    <string name="chapter">차시</string>
    <string name="studying">학습 중</string>
    <string name="none_study">미진행</string>
    <string name="studyed">학습완료</string>
    <string name="study_goal">교재목표</string>
    <string name="study_spend_time">소요시간</string>
    <string name="study_duration">학습가능기간</string>
    <string name="study_daily_chapter"><xliff:g>%d</xliff:g>차시</string>
    <string name="study_monthly_chapter">Monthly\nReview<xliff:g>%s</xliff:g></string>
    <string name="study_monthly_test">Monthly\nTest</string>
    <string name="study_monthly_test_done">Monthly\nTest 완료</string>
    <string name="score_monthly_review_point"><xliff:g>%s</xliff:g>점</string>
    <string name="chaci_monthly_review">Review <xliff:g>%s</xliff:g>차</string>
    <string name="add_account_terminate">회원가입이 완료 되었습니다.</string>
    <string name="can_use_id">사용 가능한 아이디입니다.</string>
    <string name="cannot_use_id">이미 사용중인 아이디입니다.</string>
    <string name="wait_min">잠시만 기다려주세요.</string>
    <string name="wait_for_login">로그인 중입니다. 잠시만 기다려주세요.</string>
    <string name="wait_for_data">데이터 수신 중입니다. 잠시만 기다려 주세요.</string>
    <string name="wait_for_check_member">회원 정보 확인 중입니다.\n잠시만 기다려주세요.</string>
    <string name="wait_for_add_account">회원 가입 중입니다.\n잠시만 기다려주세요.</string>
    <string name="wait_for_check_id_used">아이디 확인 중입니다.\n잠시만 기다려주세요.</string>
    <string name="sorry_try_again">죄송합니다. 다시 시도해주세요.</string>
    <string name="sorry_try_again_msg">문제가 발생했습니다.\nException(<xliff:g>%s</xliff:g>) </string>
    <string name="smart_exam">스마트평가</string>
    <string name="monthly_test">월말평가</string>
    <string name="monthly_test_date"><xliff:g>%d</xliff:g>월 <xliff:g>%d</xliff:g>일</string>
    <string name="detail_history_review_title">Monthly Review <xliff:g>%d</xliff:g></string>
    <string name="online_workbook">온라인 워크북</string>
    <string name="study_finish_spend_time">소요시간</string>
    <string name="study_score">학습성취도</string>
    <string name="restudy">복습</string>
    <string name="restudy_all">전체 복습</string>
    <string name="restudy_socre">복습 점수</string>
    <string name="do_restudy">복습하기</string>
    <string name="do_workbook_restudy">워크북\n\n복습하기</string>
    <string name="moumou_infomation">무무 소식</string>
    <string name="daily_study">교재학습</string>
    <string name="loud_study">큰소리학습</string>
    <string name="workbook_score">워크북 평균</string>
    <string name="study_score_first">학습성취도\n(1차시도)</string>
    <string name="study_score_second">학습성취도\n(2차시도)</string>
    <string name="sorry_canonot_receive_data">수신된 데이터가 없습니다.\n학습을 시작할 수 없습니다.</string>
    <string name="sorry_data_receive_exception">데이터 수신 중 에러가 발생했습니다.\n<xliff:g>%s</xliff:g></string>
    <string name="sorry_data_receive_fail">데이터 수신에 실패 했습니다.\n<xliff:g>%s</xliff:g></string>
    <string name="is_double_login">다른 기기에서 로그인이 되었습니다.\n해당 기기는 로그아웃 됩니다.</string>
    <string name="sorry_not_ready_book_resource">죄송합니다. 아직 교재가 준비되지 않았습니다.</string>
    <string name="not_connected_network">네트웍이 연결되지 않았습니다.</string>
    <string name="sorry_cannot_login_network_change">네트워크가 변경되어 로그인에  실패했습니다.\n다시 로그인 해주세요.</string>
    <string name="warning_check_pwd">두 비밀번호가 일치하지 않습니다.</string>
    <string name="wait_user_check_process">회원정보 확인중입니다. 잠시만 기다려주세요.</string>
    <string name="wait_check_id">아이디 중복 확인 중입니다. 잠시만 기다려주세요.</string>
    <string name="wait_user_change_pwd_process">비밀번호 변경중입니다. 잠시만 기다려주세요.</string>
    <string name="warning_insert_id">아이디를 입력하세요.</string>
    <string name="warning_insert_name">성명을 입력하세요.</string>
    <string name="warning_insert_pwd">비밀번호를 입력하세요.</string>
    <string name="warning_insert_mcode">MCode를 입력하세요.</string>
    <string name="warning_insert_double_check_pwd">비밀번호확인을 입력하세요.</string>
    <string name="warning_insert_pwd_not_same">두 비밀번호가 일치하지 않습니다.</string>
    <string name="warning_check_same_id">아이디 중복확인 해주세요.</string>
    <string name="warning_can_use_id">해당 아이디는 사용 할 수 있습니다.</string>
    <string name="wraning_nomember">조회된 사용자가 없거나 탈퇴된 회원입니다.\n성명 및 M코드를 확인해주세요.</string>
    <string name="warning_check_name_mcode">성명 및 M코드를 확인하세요.</string>
    <string name="again_back_out_activity">백버튼을 한번 더 누르면 이전 화면으로 돌아갑니다.</string>
    <string name="not_fount_file">파일을 찾을 수 없습니다.\n<xliff:g>%s</xliff:g></string>
    <string name="sorry_test_not_ready">테스트 교재가 준비되지 않았습니다.</string>
    <string name="waiting_req_study_info">학습 정보를 받아오는 중입니다.</string>
    <string name="sorry_cannot_receive_study_data">학습 데이터를 가져오지 못했습니다.</string>
    <string name="do_not_see">다시보지않기</string>
    <string name="player_start_time">00:00:00</string>
    <string name="player_ratio">영상크기</string>
    <string name="set_brightness">밝기\n<xliff:g id="value">%s</xliff:g></string>
    <string name="set_sound">소리\n<xliff:g id="value">%s</xliff:g></string>
    <string name="date">날짜</string>
    <string name="study_menu_0">온라인보드</string>
    <string name="study_menu_1">단어</string>
    <string name="study_menu_2">원리</string>
    <string name="study_menu_3">문제풀이</string>
    <string name="study_menu_4">유창성</string>
    <string name="study_menu_5">받아쓰기</string>
    <string name="study_menu_6">워크북</string>
    <string name="study_menu_montly_test">평가</string>
    <string name="study_menu_montly_review">월말리뷰</string>
    <string name="title_history_total">전 교재 학습 현황</string>
    <string name="study_request_correct">답안지 요청</string>
    <string name="study_request_correct_cancel">답안지 요청 취소</string>
    <string name="study_show_correct">답안지 보기</string>
    <string name="study_request_check">점검 신청</string>
    <string name="study_request_check_cancel">점검신청 취소</string>
    <string name="template_show_correct">정답 보기</string>
    <string name="template_show_input">내답 보기</string>
    <string name="template_complete">완료</string>
    <string name="template_prev">이전</string>
    <string name="template_next">다음</string>
    <string name="template_bogi">보기</string>
    <string name="template_comm">대화문</string>
    <string name="template_dnd">Drag and Drop</string>
    <string name="template_rec_listen">녹음 듣기</string>
    <string name="template_start_restudy">재학습 시작</string>
    <string name="template_rec_start">시작하기</string>
    <string name="template_rec_retry">다시하기</string>
    <string name="template_min_length">글자수 (%1$d / 영문 %2$d-1900 글자, 한글 %3$d-950 글자)</string>
    <string name="template_input_correct">정답을 입력해 주세요.</string>
    <string name="template_can_not_input">더이상 입력할 수 없습니다.</string>
    <string name="workbook_exit">워크북을 종료하시겠습니까?</string>
    <string name="template_moumou_app">무무 앱</string>
    <string name="template_recommend_app">추천 앱</string>
    <string name="notice_download_apk_download">스마트 무무 다운로드</string>
    <string name="rank_list">순위</string>
    <string name="rank_name">이름(ID)</string>
    <string name="rank_word">아는 단어</string>
    <string name="note_quiz">QUIZ</string>
    <string name="note_tab1">Lv. 1</string>
    <string name="note_tab2">Lv. 2</string>
    <string name="note_tab3">Lv. 3</string>
    <string name="note_tab4">Lv. 4</string>
    <string name="note_tab5">Lv. 5</string>
    <string name="note_taball">전체</string>
    <string name="note_known">아는 단어</string>
    <string name="note_unknown">모르는 단어</string>
    <string name="daily_test1">Test 1</string>
    <string name="daily_test2">Test 2</string>
    <string name="daily_test3">Test 3</string>
    <string name="daily_btnwrong2">틀린 단어 보기</string>
    <string name="daily_btnall2">학습 단어 보기</string>
    <string name="daily_std_words">학습 단어</string>
    <string name="diadreport_title1">문제</string>
    <string name="diadreport_title2">정답</string>
    <string name="diadreport_title3">내가 선택한 답</string>
    <string name="diadreport_no_wrong">틀린 단어가 없습니다.</string>
    <string name="diadreport_no">No</string>
    <string name="diadreport_eng_words">영어 단어</string>
    <string name="diadreport_kor">우리말 뜻</string>
</resources>